apps/hello-argocd/k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello-argocd
  labels:
    app: hello-argocd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-argocd
  template:
    metadata:
      labels:
        app: hello-argocd
    spec:
      containers:
        - name: hello-argocd
          image: ghcr.io/racenak/mlops-k8s-deployment/hello-argocd:a02501620eb4a36b11071495aeab0c312f896c02
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
          resources:
            requests:
              cpu: 50m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 32Mi
  strategy:
    blueGreen:
      activeService: hello-argocd
      previewService: hello-argocd-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 60
