apps/hello-argocd/k8s/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-argocd-preview
  labels:
    app: hello-argocd
spec:
  selector:
    app: hello-argocd
  ports:
    - port: 8080
      targetPort: 8080
