apps/hello-argocd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-argocd
  labels:
    app: hello-argocd
spec:
  selector:
    app: hello-argocd
  ports:
    - port: 8080
      targetPort: 8080
