apps/hello-argocd/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-argocd
spec:
  ingressClassName: traefik

  rules:
    - host: hello.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-argocd
                port:
                  number: 8080
